sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:2: error: identifier expected but 'val' found.
def val change:Boolean=true;
    ^AlgBubbleSort1:8: error: '(' expected but identifier found.
    if t[j]>t[j+1]
       ^