sort.basic.bubble.AlgBubbleSort1.scala.code
def val change:Boolean=true;

def bubbleSort()  {
change=false;
for (i<-0 to lgr-2)
  for(j<-0 to lgr-2)
  	if t[j]>t[j+1]
  		echange(j,j+1);
  		
}